--- a/pj-ai-poc-ui/style.css
+++ b/pj-ai-poc-ui/style.css
@@ -22,7 +22,7 @@ font-weight:bold;
 font-family: "メイリオ";
 color:#008000;
 }
-h1{
+h1.sota{
 margin: 0.3em 0px 0.2em 0px;
 font-size:400%;
 font-weight:bold;
@@ -30,13 +30,13 @@ font-family: "メイリオ";
 color:#00c0c0;
 }
 
-h2{
+h2.sota{
 margin: 0.3em 0px 0 0px;
 font-size:150%;
 color:#00c000;
 text-align:left;
 }
-h3{
+h3.sota{
 -webkit-margin-before:0em;
 -webkit-margin-after:0em;
 font-size:80%;
@@ -291,6 +291,67 @@ text-align:left;
 	width: 880px;
 	min-width: 115px;
 	height: 210px ;
+	line-height: 34px;
+	color: #00c0c0;
+	text-align: center;
+	vertical-align: middle;
+	background: #F6F6F6;
+	border: 3px solid #00c0c0;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+	z-index: 0;
+}
+
+/* balloon-3b right */
+.balloon-3b-right {
+	position: relative;
+	display: inline-block;
+	padding: 0 15px;
+	width: auto;
+	min-width: 115px;
+	height: auto;
+	line-height: 34px;
+	color: #00c0c0;
+	text-align: center;
+	background: #F6F6F6;
+	border: 3px solid #00c0c0;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+	z-index: 0;
+}
+.balloon-3b-right:before {
+	content: "";
+	position: absolute;
+	top: 50%; right: -8px;
+	margin-top: -9px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 9px 0 9px 9px;
+	border-color: transparent transparent transparent #F6F6F6;
+	z-index: 0;
+}
+.balloon-3b-right:after {
+	content: "";
+	position: absolute;
+	top: 50%; right: -12px;
+	margin-top: -10px;
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 10px 0 10px 10px;
+	border-color: transparent transparent transparent #00c0c0;
+	z-index: -1;
+}
+.balloon-3b-right {
+	position: relative;
+	display: inline-block;
+	padding: 0 15px;
+	width: 880px;
+	min-width: 115px;
+	height: 700px ;
 	line-height: 34px;
 	color: #00c0c0;
 	text-align: center;
