--- a/pj-ai-poc-ui/style.css
+++ b/pj-ai-poc-ui/style.css
@@ -15,6 +15,22 @@ div.section1 {
  background-color: #ffffff;
 }
 
+div.section2 {
+ /*角丸*/
+ border-radius: 10px; /* CSS3 */
+ -webkit-border-radius: 10px; /* Safari,Google Chrome用 */
+ -moz-border-radius: 10px; /* Firefox用 */
+ behavior: url(../js/PIE.htc); /* IE用 */
+ /*レイアウト*/
+ width: 100%;
+ text-align: center;
+ --padding: center;
+ vertical-align: middle;
+ border:0px solid;
+ border-color:#008000;
+ background-color: #ffffff;
+}
+
 p{
 margin: 0.3em 0px 0.2em 0px;
 font-size:600%;
@@ -35,6 +51,12 @@ margin: 0.3em 0px 0 0px;
 font-size:150%;
 color:#00c000;
 text-align:left;
+}
+h2.sota-c {
+    margin: 0.3em 0px 0 0px;
+    font-size: 50px;
+    color: #00c000;
+    text-align: center;
 }
 h3.sota{
 -webkit-margin-before:0em;
@@ -393,3 +415,41 @@ text-align:left;
         width: 0; 
         height: 0; 
       }
+
+table.ans {
+    border-spacing:0;
+    border-collapse:collapse
+}
+td.ans {
+    padding:0;
+    font-size:30px;
+    font-weight:bold;
+    font-family: "メイリオ";
+    color:#008000;
+	text-align: center;
+    display:table-cell;
+	vertical-align: middle;
+}
+th.ans {
+    padding:0;
+    font-size:24px;
+    font-weight:bold;
+    font-family: "メイリオ";
+    color:#008000;
+	text-align: center;
+    display:table-cell;
+	vertical-align: middle;
+}
+.table>tbody>tr>td,
+.table>tbody>tr>th,
+.table>tfoot>tr>td,
+.table>tfoot>tr>th,
+.table>thead>tr>td,
+.table>thead>tr>th{
+    padding:8px;
+    line-height:1.5;
+    vertical-align:middle;
+    border-top:1px solid #ddd
+}
+
+
