--- a/pj-ai-poc-ui/style.css
+++ b/pj-ai-poc-ui/style.css
@@ -41,9 +41,10 @@ p{
     font-weight:bold;
     font-family: "メイリオ";
     color:#008000;
+    text-shadow: -1px 1px 0 #ddd;
 }
 p.title{
-    border-left:5px solid #92d050;
+    border-left:5px solid #ddd;
     padding-left:0.3em;
     margin-left:0.3em;
     font-weight:bold;
@@ -59,7 +60,7 @@ p.titleicon{
 
 h1.sota{
     margin: 0.3em 0px 0.2em 0px;
-    font-size:400%;
+    font-size:250%;
     font-weight:bold;
     font-family: "メイリオ";
     color:#00c0c0;
@@ -77,8 +78,8 @@ h2.sota-c {
     text-align: center;
 }
 h3.sota{
-    -webkit-margin-before:0em;
-    -webkit-margin-after:0em;
+    /*-webkit-margin-before:0em;*/
+    /*-webkit-margin-after:0em;*/
     font-size:80%;
     font-weight:400;
     color:#00c000;
@@ -181,7 +182,7 @@ h3.sota{
     padding: 0 15px;
     width:100%;
 	/*min-width: 115px;*/
-	height: 210px;
+	height: 140px;
 	line-height: 34px;
 	color: #00c0c0;
 	text-align: center;
@@ -233,8 +234,8 @@ h3.sota{
 	text-align: center;
 	background: #F6F6F6;
 	border: 3px solid #00c0c0;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
 	z-index: 0;
 }
 .balloon-2-right:before {
@@ -474,6 +475,15 @@ hr {
     height: 1px;
     border: none;
     border-top: 2px #ddd solid;
+    margin-top:15px;
+    margin-bottom:15px;
+}
+
+hr2 {
+    height: 1px;
+    border: none;
+    border-top: 2px #ddd solid;
+    padding-top:1px;
 }
 
 .table-noborder {
@@ -489,4 +499,16 @@ hr {
 
 .background-position{
     background: url(img/sota_01.jpg) no-repeat center #ccc;
+}
+
+div.titleset{
+    margin-bottom: 15px;
+    border-bottom: 2px #ddd solid;
+    padding-bottom: 5px;
+}
+
+div.sotaset{
+    margin-bottom: 15px;
+    border-bottom: 2px #ddd solid;
+    padding-bottom: 5px;
 }
