--- a/pj-ai-poc-ui/style.css
+++ b/pj-ai-poc-ui/style.css
@@ -512,3 +512,11 @@ div.sotaset{
     border-bottom: 2px #ddd solid;
     padding-bottom: 5px;
 }
+
+table.answer{
+    margin-right: 15px;
+    margin-left: 15px;
+
+
+
+}
